# CodeReviewAl

./: .coverage  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: cache_utils.py  errors.py  main.py  models.py  redis_client.py  services.py
tests/: conftest.py
tests/endpoints/: test_review_endpoint.py
tests/services/: test_github_service.py  test_openai_service.py
